# ghc-core-smallstep

./: .travis.yml  README.md  ghc-core-smallstep.cabal  runtests.hs
GHC/: SmallStep.hs
GHC/SmallStep/: Tests.hs
tests/: Fact.hs  run.hs
