name:                ghc-core-smallstep
version:             0.1
synopsis:            A small-step semantics for Core
description:         This module contains an executable, type ignoring
                     small-step semantics for Haskell Core with lazyness.
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
copyright:           2017 Joachim Breitner
category:            Language
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.*

library
  exposed-modules:     GHC.SmallStep,
                       GHC.SmallStep.Tests
  build-depends:       base >=4.9 && <4.10, ghc == 8.0.*
  default-language:    Haskell2010
